@@ -1,3 +1,8 @@
+2006-03-10  Adam Schreiber  <sadam@clemson.edu>
+    
+    * libseahorse/seahorse-hkp-source.c: Respect GNOME
+    proxy settings.(Bug #324312)
+
 2006-03-08  Adam Schreiber  <sadam@clemson.edu>
 
     * agent/seahorse-agent-status.c:
